--- a/css/style.css
+++ b/css/style.css
@@ -24,24 +24,32 @@ a:visited {
 	color: hsl(210, 31%, 20%);
 }
 /* SHARED STYLES */
-.brands,
-.hero,
-.design {
-	text-align: center;
-}
 .hero__title,
 .brands__title,
 .design__title,
-.brands__btn {
+.brands__btn,
+.testimonials__title,
+.testimonials__name {
 	font-family: "Fraunces", sans-serif;
 }
 
 .brands__para,
-.design__para {
+.design__para,
+.testimonials__para,
+.testimonials__position {
 	font-family: "Barlow", sans-serif;
 	font-size: 1.8rem;
 }
 
+.brands,
+.hero,
+.design,
+.testimonials__title,
+.testimonials__para,
+.testimonials__name,
+.testimonials__position {
+	text-align: center;
+}
 /* HEADER SECTION STYLES */
 .header {
 	position: relative;
@@ -76,7 +84,8 @@ a:visited {
 }
 
 /* BRANDS SECTION STYLES */
-.brands {
+.brands,
+.testimonials {
 	background-color: hsl(26, 100%, 99%);
 }
 
@@ -148,7 +157,7 @@ a:visited {
 	color: hsl(167, 40%, 24%);
 	line-height: 1.5;
 	width: 95%;
-	margin: 2em auto 0;
+	margin: 1.8em auto 0;
 	font-weight: 600;
 }
 
@@ -156,6 +165,59 @@ a:visited {
 .design__title--blue {
 	color: hsl(198, 62%, 26%);
 }
+
+.testimonials {
+	padding-bottom: 6em;
+}
+
+.testimonials__title {
+	padding-top: 3em;
+	color: hsl(220, 2%, 64%);
+	font-size: 1.8em;
+	text-transform: uppercase;
+	letter-spacing: 0.3rem;
+}
+
+.testimonials__image,
+.testimonials__para {
+	margin: 0 auto;
+}
+
+.testimonials__image {
+	border-radius: 50%;
+	width: 20%;
+	margin-top: 5.5em;
+}
+
+.testimonials__para {
+	width: 87%;
+	color: hsl(213, 9%, 39%);
+	font-weight: 600;
+	line-height: 1.6;
+	font-size: 1.8em;
+	margin-top: 2em;
+}
+
+.testimonials__name {
+	font-size: 1.6rem;
+	font-weight: 900;
+	color: hsl(212, 27%, 19%);
+	margin-top: 1.5em;
+}
+
+.testimonials__position {
+	margin-top: 1em;
+	font-size: 1.2em;
+	color: hsl(0, 0%, 69%);
+	font-weight: 600;
+}
+
+/*GALLERY SECTION STYLES*/
+.gallery__row {
+	display: flex;
+}
+
+
 
 .attribution {
 	font-size: 11px;
