--- a/styles/style.css
+++ b/styles/style.css
@@ -421,7 +421,7 @@ h6 {
   --gap: 5.5em;
   padding-block: 6em;
 }
-@media (min-width: 950px) {
+@media (min-width: 876px) {
   .testimonials__row {
     flex-direction: row;
   }
@@ -429,6 +429,11 @@ h6 {
 .testimonials__card {
   --gap: 4em;
   padding-top: 2em;
+}
+@media (min-width: 876px) {
+  .testimonials__card {
+    padding-inline: 1em;
+  }
 }
 .testimonials__title {
   font-family: var(--font-secondary);
